--- a/app/src/main/res/drawable/progressbar_background.xml
+++ b/app/src/main/res/drawable/progressbar_background.xml
@@ -1,17 +1,17 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android" >
 
-   <!-- <item
+    <item
         android:id="@android:id/background"
-        android:drawable="@drawable/credit_scire_line"/>
+        android:drawable="@drawable/progress_line"/>
     <item android:id="@android:id/secondaryProgress">
         <scale
-            android:drawable="@drawable/credit_scire_line"
+            android:drawable="@drawable/progress_line"
             android:scaleWidth="100%" />
     </item>
     <item android:id="@android:id/progress">
         <scale
-            android:drawable="@drawable/credit_scire_line"
+            android:drawable="@drawable/progress_line"
             android:scaleWidth="100%" />
-    </item>-->
+    </item>
 
 </layer-list>
