--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -23,5 +23,6 @@
     <color name="color_gray_text">#727272</color>
     <color name="color_bg">#F5F5F5</color>
     <color name="divider_color">#d1d1d1</color>
+    <color name="semi_light_black">#7d7d7d</color>
     <color name="mtrl_textinput_default_box_stroke_color">#949BA6</color>
 </resources>
