--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,4 +19,6 @@
     <color name="colorYellow">#f3bb25</color>
     <color name="colorRed">#ef3f3f</color>
     <color name="mtrl_textinput_default_box_stroke_color">#949BA6</color>
+    <color name="textColors">#535559</color>
+
 </resources>
