--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -60,6 +60,7 @@
                     android:layout_marginStart="@dimen/_10sdp"
                     android:layout_marginTop="@dimen/_5sdp"
                     android:layout_marginBottom="@dimen/_5sdp"
+                    android:contentDescription="@string/app_name"
                     android:scaleType="fitXY"
                     android:src="@drawable/ic_launcher_background"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -73,6 +74,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/_10sdp"
                     android:layout_marginTop="@dimen/_8sdp"
+                    android:contentDescription="@string/app_name"
                     app:layout_constraintBottom_toTopOf="@+id/imageView3"
                     app:layout_constraintRight_toLeftOf="@+id/textView2"
                     app:layout_constraintStart_toEndOf="@+id/imageView"
@@ -100,6 +102,7 @@
                     android:layout_marginStart="@dimen/_10sdp"
                     android:layout_marginTop="@dimen/_5sdp"
                     android:layout_marginBottom="@dimen/_5sdp"
+                    android:contentDescription="@string/app_name"
                     app:layout_constraintBottom_toBottomOf="@+id/imageView"
                     app:layout_constraintRight_toLeftOf="@+id/textView3"
                     app:layout_constraintStart_toEndOf="@+id/imageView"
@@ -200,6 +203,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/_10sdp"
                     android:layout_marginTop="@dimen/_12sdp"
+                    android:contentDescription="@string/app_name"
                     app:layout_constraintBottom_toTopOf="@+id/imageView7"
                     app:layout_constraintRight_toLeftOf="@+id/textView4"
                     app:layout_constraintStart_toStartOf="parent"
@@ -227,6 +231,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/_10sdp"
                     android:layout_marginTop="@dimen/_5sdp"
+                    android:contentDescription="@string/app_name"
                     app:layout_constraintBottom_toTopOf="@+id/imageView8"
                     app:layout_constraintRight_toLeftOf="@+id/textView5"
                     app:layout_constraintStart_toStartOf="parent"
@@ -254,6 +259,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/_10sdp"
                     android:layout_marginTop="@dimen/_5sdp"
+                    android:contentDescription="@string/app_name"
                     app:layout_constraintBottom_toTopOf="@+id/imageView9"
                     app:layout_constraintRight_toLeftOf="@+id/textView7"
                     app:layout_constraintStart_toStartOf="parent"
@@ -282,6 +288,7 @@
                     android:layout_marginStart="@dimen/_10sdp"
                     android:layout_marginTop="@dimen/_5sdp"
                     android:layout_marginBottom="@dimen/_11sdp"
+                    android:contentDescription="@string/app_name"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintRight_toLeftOf="@+id/textView8"
                     app:layout_constraintStart_toStartOf="parent"
@@ -371,6 +378,7 @@
                     android:layout_marginTop="@dimen/_7sdp"
                     android:layout_marginEnd="@dimen/_5sdp"
                     android:layout_marginBottom="@dimen/_10sdp"
+                    android:contentDescription="@string/app_name"
                     android:scaleType="fitXY"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toStartOf="@+id/imageView13"
@@ -383,6 +391,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/_5sdp"
+                    android:contentDescription="@string/app_name"
                     app:layout_constraintBottom_toTopOf="@+id/imageView13"
                     app:layout_constraintStart_toEndOf="@+id/imageView11"
                     app:layout_constraintTop_toTopOf="@+id/imageView11"
@@ -412,6 +421,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/_5sdp"
                     android:layout_marginTop="@dimen/_3sdp"
+                    android:contentDescription="@string/app_name"
                     app:layout_constraintBottom_toTopOf="@+id/imageView14"
                     app:layout_constraintLeft_toRightOf="@+id/imageView11"
                     app:layout_constraintTop_toBottomOf="@+id/imageView12"
@@ -439,6 +449,7 @@
                     android:layout_marginStart="@dimen/_5sdp"
                     android:layout_marginTop="@dimen/_3sdp"
                     android:layout_marginBottom="@dimen/_5sdp"
+                    android:contentDescription="@string/app_name"
                     app:layout_constraintBottom_toBottomOf="@+id/imageView11"
                     app:layout_constraintStart_toEndOf="@+id/imageView11"
                     app:layout_constraintTop_toBottomOf="@+id/imageView13"
@@ -522,6 +533,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/_10sdp"
                     android:layout_marginTop="@dimen/_10sdp"
+                    android:contentDescription="@string/app_name"
                     app:layout_constraintBottom_toTopOf="@+id/imageView17"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/view6"
@@ -548,6 +560,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/_10sdp"
                     android:layout_marginTop="@dimen/_5sdp"
+                    android:contentDescription="@string/app_name"
                     app:layout_constraintBottom_toTopOf="@+id/imageView19"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/imageView16"
@@ -575,6 +588,7 @@
                     android:layout_marginStart="@dimen/_10sdp"
                     android:layout_marginTop="@dimen/_5sdp"
                     android:layout_marginBottom="@dimen/_10sdp"
+                    android:contentDescription="@string/app_name"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/imageView17"
@@ -658,6 +672,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/_10sdp"
                     android:layout_marginTop="@dimen/_10sdp"
+                    android:contentDescription="@string/app_name"
                     app:layout_constraintBottom_toTopOf="@+id/imageView26"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/view2"
@@ -685,6 +700,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/_10sdp"
                     android:layout_marginTop="@dimen/_5sdp"
+                    android:contentDescription="@string/app_name"
                     app:layout_constraintBottom_toTopOf="@+id/imageView29"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/imageView25"
@@ -712,6 +728,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/_10sdp"
                     android:layout_marginTop="@dimen/_5sdp"
+                    android:contentDescription="@string/app_name"
                     app:layout_constraintBottom_toTopOf="@+id/imageView28"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/imageView29"
@@ -739,6 +756,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/_10sdp"
                     android:layout_marginTop="@dimen/_5sdp"
+                    android:contentDescription="@string/app_name"
                     app:layout_constraintBottom_toTopOf="@+id/imageView30"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/imageView27"
@@ -765,6 +783,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/_10sdp"
                     android:layout_marginTop="@dimen/_5sdp"
+                    android:contentDescription="@string/app_name"
                     app:layout_constraintBottom_toTopOf="@+id/imageView27"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/imageView26"
@@ -793,6 +812,7 @@
                     android:layout_marginStart="@dimen/_10sdp"
                     android:layout_marginTop="@dimen/_5sdp"
                     android:layout_marginBottom="@dimen/_11sdp"
+                    android:contentDescription="@string/app_name"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/imageView28"
@@ -878,6 +898,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/_10sdp"
                     android:layout_marginTop="@dimen/_10sdp"
+                    android:contentDescription="@string/app_name"
                     app:layout_constraintBottom_toTopOf="@+id/imageView22"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/view4"
@@ -906,6 +927,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/_10sdp"
                     android:layout_marginTop="@dimen/_5sdp"
+                    android:contentDescription="@string/app_name"
                     app:layout_constraintBottom_toTopOf="@+id/imageView23"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/imageView21"
@@ -932,6 +954,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/_10sdp"
                     android:layout_marginTop="@dimen/_5sdp"
+                    android:contentDescription="@string/app_name"
                     app:layout_constraintBottom_toTopOf="@+id/imageView24"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/imageView22"
@@ -959,6 +982,7 @@
                     android:layout_marginStart="@dimen/_10sdp"
                     android:layout_marginTop="@dimen/_5sdp"
                     android:layout_marginBottom="@dimen/_10sdp"
+                    android:contentDescription="@string/app_name"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/imageView23"
@@ -981,8 +1005,8 @@
 
             </android.support.constraint.ConstraintLayout>
 
-
         </android.support.v7.widget.CardView>
+
     </LinearLayout>
 
 </ScrollView>
