--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -8,7 +8,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorGreyLight"
+        android:background="@color/screenBackground"
         android:orientation="vertical">
 
         <android.support.v7.widget.CardView
@@ -62,7 +62,7 @@
                     android:layout_marginBottom="@dimen/_5sdp"
                     android:contentDescription="@string/app_name"
                     android:scaleType="fitXY"
-                    android:src="@drawable/ic_launcher_background"
+                    android:src="@drawable/ic_user_no_img_icon"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintRight_toLeftOf="@+id/imageView2"
                     app:layout_constraintStart_toStartOf="parent"
@@ -384,7 +384,7 @@
                     app:layout_constraintEnd_toStartOf="@+id/imageView13"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/view5"
-                    app:srcCompat="@drawable/ic_launcher_background" />
+                    android:src="@drawable/ic_id_no_image" />
 
                 <ImageView
                     android:id="@+id/imageView12"
