--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -20,7 +20,20 @@
             android:layout_height="?attr/actionBarSize"
             android:background="@color/colorPrimary"
             app:popupTheme="@style/AppTheme.PopupOverlay"
-           />
+           >
+
+           <com.app.l_pesa.common.CustomButtonRegular
+               android:id="@+id/buttonRight"
+               android:layout_width="wrap_content"
+               android:layout_height="@dimen/_27sdp"
+               android:text="@string/history"
+               android:textSize="@dimen/_11sdp"
+               android:layout_gravity="end"
+               android:background="@drawable/bg_transparent_white_border_view"
+               android:layout_marginEnd="@dimen/_3sdp"
+               android:textAllCaps="false"
+               />
+       </android.support.v7.widget.Toolbar>
     </android.support.design.widget.AppBarLayout>
 
     <include layout="@layout/content_main"/>
