--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="colorApp">#00695c</color>
     <color name="colorAppDeep">#016A5D</color>
     <color name="colorAppLight">#47C9B7</color>
+    <color name="aquamarine">#4ee3cf</color>
     <color name="colorBlack">#000000</color>
     <color name="colorSemiBlack">#61666b</color>
     <color name="colorSemiLightBlack">#bcbfc2</color>
