--- a/app/src/main/res/layout/layout_loan_list.xml
+++ b/app/src/main/res/layout/layout_loan_list.xml
@@ -2,9 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="@dimen/_75sdp"
-    android:layout_marginBottom="@dimen/_3sdp"
-    android:layout_marginStart="@dimen/_5sdp"
-    android:layout_marginEnd="@dimen/_5sdp"
+    android:layout_marginBottom="@dimen/_5sdp"
+    android:layout_marginStart="@dimen/_7sdp"
+    android:layout_marginEnd="@dimen/_7sdp"
     android:background="@drawable/bg_white_view">
 
     <LinearLayout
@@ -27,13 +27,40 @@
                 android:id="@+id/txt_credit"
                 android:layout_height="@dimen/_50sdp"
                 android:layout_width="@dimen/_50sdp"
-                android:background="@drawable/bg_green_circle"
+                android:background="@drawable/bg_aquamarine_circle"
                 android:textColor="@color/colorWhite"
-                android:textSize="@dimen/_10sdp"
+                android:textSize="@dimen/_11sdp"
                 android:gravity="center"
                 />
 
+        </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight=".50"
+            android:gravity="center"
+
+            >
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight=".25"
+            android:gravity="center">
+
+
+            <com.app.l_pesa.common.CustomButtonRegular
+             android:id="@+id/buttonLoanStatus"
+             android:layout_height="@dimen/_28sdp"
+             android:layout_width="match_parent"
+             android:textSize="@dimen/_10sdp"
+             android:layout_marginStart="@dimen/_2sdp"
+             android:layout_marginEnd="@dimen/_2sdp"
+
+            />
         </LinearLayout>
     </LinearLayout>
 </LinearLayout>
