--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -32,4 +32,7 @@
     <color name="wallet_addr_link_color">#9caf01</color>
     <color name="total_lpk_color">#4e6485</color>
 
+    <color name="color_yellow">#f3bd29</color>
+    <color name="color_light_yellow">#f3ec29</color>
+
 </resources>
